--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -12,46 +12,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.2",
-    "@angular/cdk": "7.1.1",
-    "@angular/common": "7.1.2",
-    "@angular/compiler": "7.1.2",
-    "@angular/core": "7.1.2",
-    "@angular/forms": "7.1.2",
-    "@angular/http": "7.1.2",
-    "@angular/material": "7.1.1",
-    "@angular/platform-browser": "7.1.2",
-    "@angular/platform-browser-dynamic": "7.1.2",
-    "@angular/router": "7.1.2",
+    "@angular/animations": "^7.2.14",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/router": "^7.2.14",
     "angular-schema-form": "^0.8.13",
-    "bootstrap": "^4.2.1",
-    "core-js": "2.6.0",
-    "hammerjs": "2.0.8",
-    "jquery": "3.3.1",
-    "moment": "2.22.2",
-    "rxjs": "6.3.3",
-    "web-animations-js": "2.3.1",
-    "zone.js": "0.8.26"
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.0.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.4.0",
+    "moment": "^2.24.0",
+    "node-sass": "^4.11.0",
+    "rxjs": "^6.5.1",
+    "tar": "^4.4.8",
+    "web-animations-js": "^2.3.1",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "~7.0.5",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.1"
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
+    "@types/node": "^11.13.7",
+    "@types/jasmine": "^3.3.12",
+    "@types/jasminewd2": "^2.0.6",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "^3.4.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.5",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "popper.js": "^1.15.0",
+    "protractor": "^5.4.2",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "typescript": "3.2.4"
+  },
+  "peerDependencies": {
+    "typescript": "3.2.4",
+    "zone.js": "^0.8.29"
   }
 }
