--- a/fms-gui-client/package.json
+++ b/fms-gui-client/package.json
@@ -35,7 +35,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.802.2",
+    "@angular-devkit/build-angular": "^0.900.3",
     "@angular/cli": "8.2.2",
     "@angular/compiler-cli": "8.2.2",
     "@angular/language-service": "8.2.2",
