--- a/fms-gui-server/package.json
+++ b/fms-gui-server/package.json
@@ -15,8 +15,7 @@
     "express": "^4.16.4",
     "express-ws": "^4.0.0",
     "node": "^11.13.0",
-    "rxjs": "^6.5.1",
-    "tslint": "^5.15.0"
+    "rxjs": "^6.5.1"
   },
   "keywords": [],
   "devDependencies": {
@@ -27,6 +26,7 @@
     "fs": "0.0.1-security",
     "nodemon": "^2.0.2",
     "ts-node": "^8.1.0",
+    "tslint": "^5.15.0",
     "typescript": "^3.4.3"
   }
 }
